bug fix in location routes
